--- a/pharmacist/static/main.css
+++ b/pharmacist/static/main.css
@@ -1,5 +1,5 @@
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     padding-top: 20px;
     width: 100%;
@@ -7,8 +7,12 @@ footer {
     background-color: #f5f5f5;
 }
 
-table {
-    margin-bottom: 30px;
+table.dataTable {
+    margin-bottom: 30px !important;
+}
+
+table.dataTable.no-footer {
+    border: none;
 }
 
 thead th{
@@ -49,8 +53,14 @@ thead th{
     margin-bottom: 10px;
 }
 
+#header-logo {
+    display: inline-block;
+    height: 30px;
+    margin-right: 10px;
+}
+
 #landing-logo {
-    width: 300px;
+    height: 300px;
     margin: 20px;
 }
 
@@ -60,4 +70,12 @@ thead th{
 
 #med-table tbody tr {
     cursor: pointer;
+}
+
+#med-form {
+    font-size: 18px;
+}
+
+#med-form label {
+    margin-right: 20px;
 }
