--- a/pharmacist/templates/base.html
+++ b/pharmacist/templates/base.html
@@ -14,9 +14,12 @@
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
     <link rel="stylesheet" href="{% static "main.css" %}" >
   </head>
+
   <body>
     <nav class="navbar navbar-fixed-top navbar-default">
-      <a class="navbar-brand" href="{% url 'home' %}" >drchrono pharmacy dispenser</a></h1>
+      <a class="navbar-brand" href="{% url 'home' %}">
+        <img src="//i.imgur.com/Mos2chy.jpg" alt="logo" id="header-logo">Drchrono Pharmacy Dispenser
+      </a>
       <div id="login-info">
         {% if request.user.is_authenticated %}
           welcome, {{ request.user.username }}! 
@@ -40,6 +43,7 @@
     </footer>
 
 <script src="//code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+<script src="//malsup.github.com/jquery.form.js"></script>
 <script src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.2.0/bootstrap-slider.min.js"></script>
