--- a/pharmacist/templates/dispense.html
+++ b/pharmacist/templates/dispense.html
@@ -6,7 +6,7 @@
   <div class="home">
     <div class="card text-center">
       <div class ="card-section">
-        <h1>Manage Medications</h1>
+        <h2>Manage Medications for {{ patient_name }}</h2>
 
         <table id="med-table" class="table table-striped table-hover">
           <thead>
@@ -44,14 +44,14 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title"></h4>
+          <h4 class="modal-title"> Dispense</h4>
         </div>
-        <div class="modal-body">
-          <p>One fine body…</p>
+        <div class="modal-body" id="med-modal-body">
+          <p class="text-center">( loading... )</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary" id="modal-save-button">Dispense</button>
         </div>
       </div>
     </div>
@@ -61,14 +61,21 @@
 {% block scripts %}
   <script>
     var patient_id = {{ patient_id }};
-    var med_list = {{ med_list_json|safe }};
     var selected_med = {};
 
     $(function() {
       $('#med-modal').modal('hide');
       $('#med-table tbody tr').click( function () {
+        selected_med = $(this).attr('data-id');
+        $('#med-modal-body').load('/modify/'+selected_med+'/');
         $('#med-modal').modal('show');
-        selected_med = med_list[$(this).attr('data-id')];
+      });
+      $('#modal-save-button').click(function(){
+        $('#med-form').ajaxSubmit({url: '/modify/'+selected_med+'/', type: 'post', success: function(){
+          $('#med-modal').modal('hide');
+          location.reload();
+          }
+        });
       });
     });
   </script>
