--- a/pharmacist/templates/index.html
+++ b/pharmacist/templates/index.html
@@ -10,7 +10,7 @@
             <h1>Welcome to the Pharmacy Dispenser</h1>
             <p>Connect with your patients through Drchrono to track pharmaceuticals as they're dispensed.</p>
           </div>
-          <img src="http://i.imgur.com/8LssA0l.png" alt="logo" id="landing-logo">
+          <img src="//i.imgur.com/Mos2chy.jpg" alt="logo" id="landing-logo">
         </div>
       </div>
     </div>
