fix bugs in API modeule and add AuditLog model

--- a/pharmacist/templates/dispense.html
+++ b/pharmacist/templates/dispense.html
@@ -21,7 +21,7 @@
           </thead>
           <tbody>
             {% for m in med_list %}
-              <tr data-id="{{ m.id }}">
+              <tr data-id="{{ m.item_id }}">
                 <td>{{ m.name }}</td>
                 <td>{{ m.rxnorm }}</td>
                 <td>{{ m.dispense_quantity }}</td>
