--- a/pharmacist/templates/patient_list.html
+++ b/pharmacist/templates/patient_list.html
@@ -21,7 +21,7 @@
           <tbody>
             {% for p in patient_list %}
               <tr>
-                <td>{{ p.id }}</td>
+                <td>{{ p.item_id }}</td>
                 <td>{{ p.last_name }}</td>
                 <td>{{ p.first_name }}</td>
                 <td>{{ p.gender }}</td>
