add patient portal authentication using SSN

--- a/pharmacist/static/main.css
+++ b/pharmacist/static/main.css
@@ -20,6 +20,11 @@ thead th{
     text-align: center;
 }
 
+.errorlist {
+    color: red;
+    list-style: none;
+}
+
 .home {
     margin-top: 70px;
     overflow: auto;
