--- a/pharmacist/templates/email_refill.html
+++ b/pharmacist/templates/email_refill.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <body style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;">
@@ -20,7 +19,7 @@
             <p>
               Your prescription for {{ med.name }} 
               {% if med.number_refills %}
-                only has {{ med.number_refills }} refills left.
+                only has {{ med.number_refills }} refill(s) left.
               {% else %}
                 has no refills left.
               {% endif %}
