--- a/pharmacist/static/main.css
+++ b/pharmacist/static/main.css
@@ -85,3 +85,9 @@ thead th{
 #med-form label {
     margin-right: 20px;
 }
+
+#datepicker-block {
+    margin-bottom: 350px;
+    display: inline-block;
+    text-align: center;
+}
