--- a/pharmacist/templates/schedule.html
+++ b/pharmacist/templates/schedule.html
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="small-12 columns">
 
-        <div class="container">
+        <div class="container text-center">
             <div class="row">
                 <div class='col-sm-6'>
                     <div class="form-group" id="datepicker-block">
